--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
                 <a href="https://www.linkedin.com/in/joshua-smith-1630b2167/">LinkedIn Page</a>
                 <a href="https://www.facebook.com/profile.php?id=100003869237572">Facebook Page</a>
+                <a href="quiz.html">Quiz</a>
             </nav>
         </header>
         <div class="grid">
