--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About Us</title>
+        <title>Contact Us</title>
         <meta name="description" content="A little about us and why we made this">
         <meta name="author" content="Joshua Smith">
-        <!-- <link rel="stylesheet" href="styles/rafting.css"> -->
+        <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
         <header>
