--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -39,7 +39,7 @@
                 <h3>Navigation</h3>
                 <nav>
                     <a href="#">Home</a>
-                    <a href="#">About Us</a>
+                    <a href="wwr/about.html">About Us</a>
                     <a href="#">Trips</a>
                     <a href="#">Contact Us</a>
                 </nav>
@@ -57,38 +57,3 @@
 </html>
 
 
-
-
-header {
-    justify-content: space-around;
-    align-content: space-around;
-    background-color: aqua;
-    border: solid navy 2px;
-}
-
-header img {
-    margin: 30px;
-    width: 150px;
-}
-
-p {
-    font-family: var(--paragraph-font);
-}
-
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-
-    padding: 10px;
-}
-
-img {
-    border: solid black 1px;
-    box-shadow: 2px 4px 4px black
-    pa
-}
-
-
-
-              
