--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         </div>
         <footer>
             <p>&copy;2024, Joshua Smith, Canada</p>
+            <nav>
+                <a href="wwr/about.html">About Us</a>
+            </nav>
         </footer>
     </body>
     <!-- The date this was last modified was June 29, 2024 -->
