--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,20 +45,26 @@
             <section>                  
                     <h2>Adventure Awaits You</h2>
                 <div class="adventure">   
-                    <p>Group Rafting</p> 
-                    <img src="images/rafting-team.jpg" alt="rafting team">
-
-                    <p>Fun Rafting</p>
-                    <img src="images/fun-rafting.jpg" alt="fun rafting">
-
-                    <p>Solo Fun</p>     
-                    <img src="images/solo-rafting.jpg" alt="solo rafting">
-
-                    <p>Areal Shot</p> 
-                    <img src="images/rafting-zoomed-out.jpg" alt="Rafting zoomed out">
-
-                    <p>Team Work</p>   
-                    <img src="images/team-work.jpg" alt="team work">
+                    <div>
+                        <p>Group Rafting</p> 
+                        <img src="images/rafting-team.jpg" alt="rafting team">
+                    </div>
+                    <div>
+                        <p>Fun Rafting</p>
+                        <img src="images/fun-rafting.jpg" alt="fun rafting">
+                    </div>
+                    <div>
+                        <p>Solo Fun</p>     
+                        <img src="images/solo-rafting.jpg" alt="solo rafting">
+                    </div>
+                    <div>
+                        <p>Areal Shot</p> 
+                    `   <img src="images/rafting-zoomed-out.jpg" alt="Rafting zoomed out">
+                    </div>
+                    <div>
+                        <p>Team Work</p>   
+                        <img src="images/team-work.jpg" alt="team work">
+                    </div>
                 </div>
             </section>
             
