--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -41,7 +41,7 @@
                     <a href="#">Home</a>
                     <a href="wwr/about.html">About Us</a>
                     <a href="#">Trips</a>
-                    <a href="#">Contact Us</a>
+                    <a href="wwr/contact.html">Contact Us</
                 </nav>
                 <h2>Wireframes</h2>
                 <h3>Home Page Wireframe</h3>
