--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Contact Us</title>
-        <meta name="description" content="A little about us and why we made this">
+        <meta name="description" content="How to contact us and where we can be found">
         <meta name="author" content="Joshua Smith">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
@@ -19,26 +19,67 @@
             </nav>
         </header>
         <main>
-            <div class="hero">
-                <img src="images/hero-image.jpg" alt="hero image">
-                <h1>Life Rafting</h1>
-                <article>
-                    <img src="images/happy-customer.png" alt="Happy customer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur deleniti id nostrum sit, praesentium unde perspiciatis! Molestiae, unde omnis. Enim perferendis voluptas harum, libero sequi voluptate quia sapiente delectus minima?</p>
-                </article>
-            </div>
             <section>
-                <h2>History</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor laboriosam fugiat eos saepe facere? Accusantium nostrum esse autem natus, harum mollitia hic nesciunt deleniti exercitationem quisquam vitae ipsum suscipit velit?</p>
+                <h2>Company Information</h2>
+                <h3>Address</h3>
+                <p>10637 108th ST NW Edmonton, Alberta, Canada</p>
+
+                <h3>Phone Number</h3>
+                <p>(780) 992-1161</p>
+
+                <h3>Email</h3>
+                <p>liferafting@liferafting.com</p>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d25391.985504266602!2d-113.51135624392228!3d53.548890409546026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1721330641979!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
             <section>
-                <h2>Adventure Awaits You</h2>
-                <img src="images/rafting-team.jpg" alt="rafting team">
-                <img src="images/fun-rafting.jpg" alt="fun rafting">
-                <img src="images/solo-rafting.jpg" alt="solo rafting">
-                <img src="images/rafting-zoomed-out.jpg" alt="Rafting zoomed out">
-                <img src="images/team-work.jpg" alt="team work">
+                <h2>Meet Our Employees</h2>
+                <div class="adventure"> 
+                    <div>      
+                        <img src="images/employee1.jpg" alt="rafting team">
+                        <p><strong>Evan Bowson</strong></p>
+                        <p>Tour Guide</p>
+                    </div>
+                    <div>
+                        <img src="images/employee2.jpg" alt="fun rafting">
+                        <p><strong>Niko Erikson</strong></p>
+                        <p>Customer Service Rep</p>
+                    </div>
+                    <div>
+                        <img src="images/employee3.jpg" alt="solo rafting">
+                        <p><strong>Mandy Mink</strong></p>
+                        <p>Scheduling Co-Ordinator</p>
+                    </div>
+                    <div>
+                        <img src="images/employee4.jpg" alt="Rafting zoomed out">
+                        <p><strong>Liam Short</strong></p> 
+                        <p>Website Design</p>
+                    </div>
+                    <div>
+                        <img src="images/employee5.jpg" alt="team work">
+                        <p><strong>Kayla Sheen</strong></p>
+                        <p>Social Medea Rep</p>  
+                    </div>
+                </div>
             </section>
+            <form action="/index.html">    
+                <label for="q1">Name</label>
+                <input type="text" name="q1" id="q1">
+                <label for="q1">Email</label>
+                <input type="text" name="q1" id="q1">
+                <input type="radio" id="gi" name="general inquiry" value="Gneral Enquiry">
+                <label for="gi">General Inquiry</label><br>
+           
+                <input type="radio" id="rq" name="reservation question" value="Reservation Request">
+                <label for="rq">Reservation Question</label><br>
+                <input type="radio" id="ws" name="website suggestion" value="Website Suggestion">
+                <label for="ws">Website Suggestion</label><br>
+                <label for="q2">Message</label>
+                <textarea type="text" id="q2" name="q2"></textarea>
+                <button>Submit</button>
+            
+
+            </form>
         </main>
         <footer>
             <p>&copy;2024 Life Rafting | Joshua Smith</p>
