--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="grid">
             <main>
                 <h1>Joshua Smith | WDD 130</h1>
-                <img src="images/profile.JPG" alt="Joshua Smith" width="200">
+                <img src="images/profile.jpeg" alt="Joshua Smith" width="200">
                 <p>Hello! I am currently working full time as well as enrolled in I am 28 years old, and am married to the love of my life. I am looking forward to being a dad. This is an essental step in my journey of providing a life for my family. In terms of things I enjoy, I would have to say that drawing is at the top, I also love biking, swimming, and reading fiction books. I am the first boy of six kids, and I love my family. I got really close to my siblings since we were all homeschooled, at least until I graduated, then a few of my sisters and one brother decided to finiish their highschool at an actual school. I recently got a job at a construction company and have been using that as a means to pay for my schooling and to keep my wife and I in the city. Ultimately I would like to become a computer software developer, and help influence current and future trends in media. I have spent most of my life in Canada, though the few places I have traveled have been pretty interesting. China as an example was very exotic and different from what I was used to. I spent a lot of time admiring their landscape and archatecture. It is so much more ancient then Canada in terms of development.</p>
                 <ul class="box">
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/cardston-alberta-temple" target="_blank">Cardston Alberta Temple</a></li>
@@ -40,9 +40,6 @@
         </div>
         <footer>
             <p>&copy;2024, Joshua Smith, Canada</p>
-            <nav>
-                <a href="wwr/about.html">About Us</a>
-            </nav>
         </footer>
     </body>
     <!-- The date this was last modified was June 29, 2024 -->
