--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </aside>
         </div>
         <footer>
+            <a href="wwr/contact.html">Contact Us</a>
             <p>&copy;2024, Joshua Smith, Canada</p>
         </footer>
     </body>
