--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -63,10 +63,10 @@
                 </div>
             </section>
             <form action="/index.html">    
-                <label for="q1">Name</label>
-                <input type="text" name="q1" id="q1">
-                <label for="q1">Email</label>
-                <input type="text" name="q1" id="q1">
+                <label for="name">Name</label>
+                <input type="text" name="q1" id="name">
+                <label for="email">Email</label>
+                <input type="text" name="q1" id="email">
                 <input type="radio" id="gi" name="general inquiry" value="Gneral Enquiry">
                 <label for="gi">General Inquiry</label><br>
            
@@ -75,7 +75,7 @@
                 <input type="radio" id="ws" name="website suggestion" value="Website Suggestion">
                 <label for="ws">Website Suggestion</label><br>
                 <label for="q2">Message</label>
-                <textarea type="text" id="q2" name="q2"></textarea>
+                <textarea id="q2" name="q2"></textarea>
                 <button>Submit</button>
             
 
