--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             </aside>
         </div>
         <footer>
-            <a href="wwr/contact.html">Contact Us</a>
+            <nav><a href="wwr/contact.html">Contact Us</a></nav>
+            
             <p>&copy;2024, Joshua Smith, Canada</p>
         </footer>
     </body>
