--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
             </aside>
         </div>
         <footer>
-            <nav><a href="wwr/contact.html">Contact Us</a></nav>
+            <nav>
+                <a href="wwr/contact.html">Contact Us</a>
+            </nav>
             
             <p>&copy;2024, Joshua Smith, Canada</p>
         </footer>
