--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/cardston-alberta-temple" target="_blank">Cardston Alberta Temple</a></li>
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/edmonton-alberta-temple" target="_blank">LA California Temple</a></li>
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/los-angeles-california-temple" target="_blank">Edmonton Alberta Temple</a></li>
+                    <li><a href="wwr/contact.html">Contact Us</a></li>
                 </ul>
             </main>
             <aside class="box">
@@ -39,10 +40,6 @@
             </aside>
         </div>
         <footer>
-            <nav>
-                <a href="wwr/contact.html">Contact Us</a>
-            </nav>
-            
             <p>&copy;2024, Joshua Smith, Canada</p>
         </footer>
     </body>
