--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,11 @@
     <body>
         <header><h1>WDD 130 | Joshua Smith | HTML form - Quiz</h1></header>
         <main>
-            <form action="/index.html">    
+
+            <form action="/index.html">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name">
+
                 <label for="q1">HTML is an acronym for??</label>
                 <input type="text" name="q1" id="q1">
                 <label for="q2">What are the three attributes that go into the body element?</label>
