--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,9 +33,12 @@
 
                 <h1>Life Rafting</h1>
                 
-                <article class="happy">
+                <article>
                     <img src="images/happy-customer.png" alt="Happy customer">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur deleniti id nostrum sit, praesentium unde perspiciatis! Molestiae, unde omnis. Enim perferendis voluptas harum, libero sequi voluptate quia sapiente delectus minima?</p>
+                    <div>
+                        <h2>Our Purpose</h2>
+                    <p>We are here to create a fun and exciting environtment for everyone looking for a quality experience. Too many experiences are being digitized and so we are committed to creating safe yet valuable real life experience where everyone can come and grow in the understanding of what it means to be alive.</p>
+                    </div>
                 </article>
             </div>
             <section class="history">
@@ -74,13 +77,13 @@
             <p>&copy;2024 Life Rafting | Joshua Smith</p>
             <nav class="sociallinks">
                 <a href="https://www.facebook.com/">
-                    <img src="images/facebook.svg" alt="book icon">
+                    <img src="images/icons8-facebook-logo.svg" alt="book icon">
                 </a>
                 <a href="https://www.instagram.com/">
-                    <img src="images/instagram.svg" alt="camera icon">
+                    <img src="images/icons8-instagram.svg" alt="camera icon">
                 </a>
                 <a href="https://x.com/">
-                    <img src="images/x.svg" alt="x icon">
+                    <img src="images/icons8-x-logo.svg" alt="x icon">
                 </a>
             </nav>
 
