--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <nav>
                 <a href="#">Home</a>
-                <a href="wwr/">Rafting Website</a>
+                <a href="wwr/index.html">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
                 <a href="https://www.linkedin.com/in/joshua-smith-1630b2167/">LinkedIn Page</a>
                 <a href="https://www.facebook.com/profile.php?id=100003869237572">Facebook Page</a>
@@ -29,7 +29,6 @@
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/cardston-alberta-temple" target="_blank">Cardston Alberta Temple</a></li>
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/edmonton-alberta-temple" target="_blank">LA California Temple</a></li>
                     <li><a href="https://newsroom.churchofjesuschrist.org/article/los-angeles-california-temple" target="_blank">Edmonton Alberta Temple</a></li>
-                    <li><a href="wwr/contact.html">Contact Us</a></li>
                 </ul>
             </main>
             <aside class="box">
