--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
             <img src="images/rafting-logo.jpg" alt="company logo">
             <nav>
                 <div>    
-                    <a href="index.html">Index</a>
+                    <a href="index.html">Home</a>
                 </div> 
                 <div>
                     <a href="about.html">About Us</a>
@@ -22,7 +22,7 @@
                     <a href="trips.html">Trips</a>
                 </div>
                 <div>
-                    <a href="Contact.html">Contact Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
             </nav>
         </header>
