--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -31,7 +31,7 @@
                 <img src="images/white-water.jpg" alt="Panorama of a river with two rafts">
                 <h1>Rafting Challenges</h1>
                 <div>
-                    <button><strong><a href="contact.html">Click Here For Booking Information</a></strong></button>
+                    <strong><a href="contact.html">Click Here For Booking Information</a></strong>
                 </div>
             </div>
             <section class="trips">
