--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
                 <label for="q1">HTML is an acronym for??</label>
                 <input type="text" name="q1" id="q1">
                 <label for="q2">What are the three attributes that go into the body element?</label>
-                <textarea type="text" id="q2" name="q2"></textarea>
+                <textarea id="q2" name="q2"></textarea>
                 <label for="q3">What is the shorthand CSS for the color black?</label>
                 <select name="q3" id="q3">
                     <option value="" selected disabled>Choose One...</option>
