--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
-        <title>Home</title>
-        <meta name="description" content="The home page to a rafting site">
-        <meta name="autor" content="Joshua Smith">
+        <title>Rafting Site Home Page</title>
+        <meta name="description" content="First look of the rafting company, meant to catch the eye and dirrect users to the right places">
+        <meta name="author" content="Joshua Smith">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
     <body>
@@ -32,10 +32,11 @@
                 <h1>Life Adventures</h1>
             </div>
             <div class="content">
-                <div>
+                <div class="hook">
                     <img src="images/trip-1.jpg" alt="">
                     <img src="images/trip-2.jpg" alt="">
                     <img src="images/trip-3.jpg" alt="">
+                    <p>Safe, and fun for the whole family, helping connect you to what is real</p>
                     <a href="trips.html"><p>Check out our various packages and oportunities for fun!</p></a>
                     
                 </div>
@@ -48,7 +49,7 @@
                         <input type="text" id="name" name="Name">
                         <label for="email">Email</label>
                         <input type="text" id="email" name="Email">
-                        <button>submit</button>
+                        <button>Sign Up</button>
                         <p>Thanks for connecting!</p>
                     </div>
                 </form>
@@ -58,6 +59,7 @@
         </main>
         <footer>
             <p>&copy;2024 Life Rafting | Joshua Smith</p>
+            <a href="files/home-page.html">Wireframe</a>
             <nav class="sociallinks">
                 <a href="https://www.facebook.com/">
                     <img src="images/icons8-facebook-logo.svg" alt="book icon">
@@ -69,7 +71,7 @@
                     <img src="images/icons8-x-logo.svg" alt="x icon">
                 </a>
             </nav>
-
+            
         </footer>
     </body>
 
