--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Trips</title>
-        <meta name="description" content="Its a trip!">
+        <title>Trips Page</title>
+        <meta name="description" content="Allow customer to be perfectly informed about what company has to offer, as well as what it entails to sign up">
         <meta name="author" content="Joshua Smith">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
@@ -74,6 +74,7 @@
         </main>
         <footer>
             <p>&copy;2024 Life Rafting | Joshua Smith</p>
+            <a href="files/trips-page (1).html">Wireframe</a>
             <nav class="sociallinks">
                 <a href="https://www.facebook.com/">
                     <img src="images/icons8-facebook-logo.svg" alt="book icon">
