--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About Us</title>
-        <meta name="description" content="A little about us and why we made this">
+        <title>About Us Page</title>
+        <meta name="description" content="Information regarding the history and purpose of this rafting orginization">
         <meta name="author" content="Joshua Smith">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
