--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Contact Us</title>
-        <meta name="description" content="How to contact us and where we can be found">
+        <title>Contact Us Page</title>
+        <meta name="description" content="Relevant information that will help to connect customers to the right people">
         <meta name="author" content="Joshua Smith">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
